--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<div class="player-container">
 			<audio class="song">
-				<source src="./sounds/rain1.mp3">
+				<source src="./sounds/rain.mp3">
 			</audio>
 			<img src="./svg/play.svg" alt="play" class="play">
 			<svg 
@@ -46,10 +46,10 @@
 			<h3 class="time-display">0:00</h3>
 		</div>
 		<div class="sound-picker">
-			<button data-sound="./sounds/rain1.mp3" data-video="./video/rain.mp4">
+			<button data-sound="./sounds/rain.mp3" data-video="./video/rain.mp4">
 				<img src="./svg/rain.svg" alt="rain" />
 			</button>
-			<button data-sound="./sounds/beach1.mp3" data-video="./video/beach.mp4">
+			<button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4">
 				<img src="./svg/beach.svg" alt="beach" />
 			</button>
 		</div>
