--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./Styles/style.css">
 	<title>relax</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
 
 		<div class="vid-container">
 			<video loop>
-				<source src="./video/rain.mp4" type="video/mp4">
+				<source src="./assets/video/rain.mp4" type="video/mp4">
 			</video>
 		</div>
 
@@ -27,9 +27,9 @@
 
 		<div class="player-container">
 			<audio class="song">
-				<source src="./sounds/rain.mp3">
+				<source src="./assets/sounds/rain.mp3">
 			</audio>
-			<img src="./svg/play.svg" alt="play" class="play">
+			<img src="./assets/svg/play.svg" alt="play" class="play">
 			<svg 
 			class="track-outline"
 			width="453" height="453" viewBox="0 0 453 453" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -46,19 +46,16 @@
 			<h3 class="time-display">0:00</h3>
 		</div>
 		<div class="sound-picker">
-			<button data-sound="./sounds/rain.mp3" data-video="./video/rain.mp4">
-				<img src="./svg/rain.svg" alt="rain" />
+			<button data-sound="./assets/sounds/rain.mp3" data-video="./assets/video/rain.mp4">
+				<img src="./assets/svg/rain.svg" alt="rain" />
 			</button>
-			<button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4">
-				<img src="./svg/beach.svg" alt="beach" />
+			<button data-sound="./assets/sounds/beach.mp3" data-video="./assets/video/beach.mp4">
+				<img src="./assets/svg/beach.svg" alt="beach" />
 			</button>
 		</div>
 	</div>
 
 
-
-
-
-<script src="./app.js"></script>
+<script src="./JS/app.js"></script>
 </body>
 </html>
